Create a Message Display Area

--- a/WPF.Sample/MainWindow.xaml
+++ b/WPF.Sample/MainWindow.xaml
@@ -6,49 +6,64 @@
         xmlns:vm="clr-namespace:WPF.Sample.ViewModelLayer;assembly=WPF.Sample.ViewModelLayer"
         mc:Ignorable="d"
         Title="Sample WPF Application"
-        WindowStartupLocation="CenterScreen">
-  <Window.Resources>
-    <vm:MainWindowViewModel x:Key="viewModel"
-                            StatusMessage="Sample WPF Application" />
-  </Window.Resources>
-  <Grid Background="{StaticResource gridBackgroundColor}"
+        WindowStartupLocation="CenterScreen" Loaded="Window_Loaded">
+    <Window.Resources>
+        <vm:MainWindowViewModel x:Key="viewModel"
+                                InfoMessageTitle="Please Wait while Application Loading..."
+                                StatusMessage="Sample WPF Application" />
+    </Window.Resources>
+    <Grid Background="{StaticResource gridBackgroundColor}"
         DataContext="{StaticResource viewModel}">
-    <Grid.RowDefinitions>
-      <RowDefinition Height="Auto" />
-      <RowDefinition Height="*" />
-      <RowDefinition Height="Auto" />
-    </Grid.RowDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
 
-    <!-- Menu Area -->
-    <Menu Grid.Row="0"
+        <!-- Menu Area -->
+        <Menu Grid.Row="0"
           IsMainMenu="True">
-      <Menu.ItemsPanel>
-        <ItemsPanelTemplate>
-          <DockPanel HorizontalAlignment="Stretch" />
-        </ItemsPanelTemplate>
-      </Menu.ItemsPanel>
-      <MenuItem Header="_File">
-        <MenuItem Header="E_xit"
+            <Menu.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <DockPanel HorizontalAlignment="Stretch" />
+                </ItemsPanelTemplate>
+            </Menu.ItemsPanel>
+            <MenuItem Header="_File">
+                <MenuItem Header="E_xit"
                   Click="MenuItem_Click" />
-      </MenuItem>
-      <MenuItem Header="Users"
+            </MenuItem>
+            <MenuItem Header="Users"
                 Click="MenuItem_Click" />
-      <MenuItem Header="Feedback"
+            <MenuItem Header="Feedback"
                 Click="MenuItem_Click" />
-      <MenuItem Header="{Binding Path=LoginMenuHeader}"
+            <MenuItem Header="{Binding Path=LoginMenuHeader}"
                 HorizontalAlignment="Right"
                 Click="MenuItem_Click" />
-    </Menu>
+        </Menu>
 
-    <!-- Content Area -->
-    <Grid Grid.Row="1"
+        <!--Informational Message Area-->
+        <Border Grid.Row="1"
+                Panel.ZIndex="2"
+                Visibility="{Binding Path=IsInfoMessageVisible,
+            Converter={StaticResource visibilityConverter}}"
+                Style="{StaticResource infoMessageArea}">
+            <StackPanel>
+                <TextBlock FontSize="40"
+                           Text="{Binding Path=InfoMessageTitle}"/>
+                <TextBlock FontSize="24"
+                           Text="{Binding Path=InfoMessage}"/>
+            </StackPanel>
+        </Border>
+
+        <!-- Content Area -->
+        <Grid Grid.Row="1"
           Panel.ZIndex="1"
           Name="contentArea"
           Style="{StaticResource contentAreaStyle}" />
 
-    <!-- Status Message Area -->
-    <TextBlock Grid.Row="2"
+        <!-- Status Message Area -->
+        <TextBlock Grid.Row="2"
                Text="{Binding Path=StatusMessage}"
                Style="{StaticResource statusAreaStyle}" />
-  </Grid>
+    </Grid>
 </Window>
